--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a>池上に住んでいます</li>
-          <li><a href="./works.html" title="">02 : Works</a>東京理科大学に通っています</li>
-          <li><a href="./about.html" title="">03 : About me</a>男です</li>
-          <li><a href="./contact.html" title="">04 : Contact</a>何もないです</li>
-          <li><a href="./components.html" title="">05 : Components</a>何もないです</li>
+          <li><a href="./index.html" title="">01 : Home</a></li>
+          <li><a href="./works.html" title="">02 : Works</a></li>
+          <li><a href="./about.html" title="">03 : About me</a></li>
+          <li><a href="./contact.html" title="">04 : Contact</a></li>
+          <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
 
 
@@ -56,11 +56,10 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>Hello,<br>
+              <h1>こんにちは！,<br>
                 <span id="typed-strings">
-                  <span>I'm James Dean</span>
-                  <span>French Designer</span>
-                  <span>Working as a Freelance</span>
+                  <span>理系大学生です</span>
+                  <span>日本にしっかり住んでいます</span>
                 </span>
                 <span id="typed"></span>
               </h1>
