--- a/about.html
+++ b/about.html
@@ -62,15 +62,21 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
-                  <p>
+                  <h3>どーゆー話なん？？</h3>
+                  <p>この話は異世界転生系のギャグアニメで，原作は小説17巻で完結しておりアニメは2クール， 映画があるんだよね。めっちゃ面白いよ。ちなみに自分は全館持ってますｗ。メンバーの癖が強すぎるのよ！めちゃおもろいよ。</p>
+                  <h3>メインキャラクターは？</h3>
+                  <h5>カズマ</h5>
+                  <p>カズマはくそニートで異世界に転生されたんよ。異世界でのステータスは最低スペックだけど運だけは最強クラスです。</p>
+                  <h5>アクア</h5>
+                  <p>アクアは駄女神です。ダメなんだけど一応女神です。天然の無能ですが少しは可愛い。アクシズ教のトップで水色の髪の毛をしているのさ。職業はプリーストの上位互換であるアークプリーストよ。</p>
+                  <h5>めぐみん</h5>
+                  <p>めぐみんは一番知名度があるかな？紅魔族で赤い目をしているのよ。アークウィザードって職業で最強の魔法使いなんだよね。でも少しね。欠点があるのよね・・・。</p>
+                  <h5>ダクネス</h5>
+                  <p>こいつは何だっけww。金髪でめっちゃ強い盾なんよ。人間なのかもわかんない。まぁ一言でいえば金持ちのドMです。</p>
+                  <h3>とにかくこの春休みにアニメを見ましょう！</h3>
+                  <p>たったの24話しかないので是非見てください。去年の夏ごろに作者がOVA（オリジナルビデオアニメーション）かな？を作るって言ってたので今年に完成して丁度楽しめると思いますよ！</p>
+                   
+                  
                   Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
