--- a/works.html
+++ b/works.html
@@ -75,7 +75,7 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Fringilla sit amet</h3>
+                        <h3>この素晴らしい世界に祝福を！</h3>
                         <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
@@ -115,7 +115,7 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
+                      <h3>ようこそ実力至上主義の教室へ</h3>
                       <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
@@ -138,7 +138,7 @@
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
+                        <h3>ぐらんぶる</h3>
                         <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
