--- a/works.html
+++ b/works.html
@@ -86,7 +86,7 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>Nulla scelerisque</h3>
+                        <h3>やはり俺の青春ラブコメは間違っている</h3>
                         <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
@@ -97,7 +97,7 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
+                        <h3>シュタインズ・ゲート</h3>
                         <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
@@ -126,7 +126,7 @@
                       </a>
                       <div class="card-container">
                         <h4>005/006</h4>
-                        <h3>Fringilla sit amet</h3>
+                        <h3>Angel Beats!</h3>
                         <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
