--- a/works.html
+++ b/works.html
@@ -76,7 +76,7 @@
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
                         <h3>この素晴らしい世界に祝福を！</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <p>異世界転生系のギャグアニメ最高峰！！見始めたら目不足不可避！！.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -87,7 +87,7 @@
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
                         <h3>やはり俺の青春ラブコメは間違っている</h3>
-                        <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                        <p>高校生の青春アニメ！！とにかく考えさせられることが多い！ラストの三期は全話やばい！！</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -98,7 +98,7 @@
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
                         <h3>シュタインズ・ゲート</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                        <p>タイムリープ系アニメの元祖！！これを見ずにはタイムリープは語れない！！</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -116,7 +116,7 @@
                     <div class="card-container">
                       <h4>004/006</h4>
                       <h3>ようこそ実力至上主義の教室へ</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <p>頭脳戦と言えばこれ！！とにかくレベルが高すぎて見終わった後は言葉が出ない！</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -139,7 +139,7 @@
                       <div class="card-container">
                         <h4>006/006</h4>
                         <h3>ぐらんぶる</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                        <p>スキューバダイビングサークルのお話！！海がメインと思いきや・・・。</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
