--- a/works.html
+++ b/works.html
@@ -127,7 +127,7 @@
                       <div class="card-container">
                         <h4>005/006</h4>
                         <h3>Angel Beats!</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <p>舞台は死後の世界！？天使との殺し合いが今始まる！！</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
