--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </nav>
 </header>
 <!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/space.jpg')">
+  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/IMG_3295.JPG')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
