--- a/works.html
+++ b/works.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-sm-4">
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/work02-hover.jpg" alt="" class="img-responsive">
+                        <img src="./assets/images/IMG_3509.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="col-sm-4">
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                        <img src="./assets/images/IMG_3508.JPG" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
@@ -111,7 +111,7 @@
                 <div class="row">
                   <div class="col-sm-4">
                     <a href="./work.html" class="black-image-project-hover">
-                      <img src="./assets/images/work02-hover.jpg" alt="Image" class="img-responsive">
+                      <img src="./assets/images/IMG_3510.JPG" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
@@ -134,7 +134,7 @@
                     
                     <div class="col-sm-4">
                       <a href="./work.html" class="black-image-project-hover">
-                        <img src="./assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
+                        <img src="./assets/images/IMG_3511.JPG" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
