--- a/works.html
+++ b/works.html
@@ -56,8 +56,8 @@
       
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
-          <h1 class="h2">02 : Works</h1>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <h1 class="h2">02 : 好きなアニメ</h1>
+          <p>私が今まで見てきたアニメで特に面白く記憶に残っている物を６つ紹介します！！これを機会にアニメを好きになりましょう！！アニメから声優や曲へ知識が広がり知識人になれますよ。</p>
         </div>
       </div>
 
