--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>みなさん！,<br>
+              <h1>こんにちは！,<br>
                 <span id="typed-strings">
-                  <span>アニメは好きですか？</span>
-                  <span>僕の好きなアニメをいくつか紹介します！</span>
+                  <span>日本に住んでる理系の人です！</span>
+                  <span>てきとーに自分語りさせてくださいｗｗ</span>
                 </span>
                 <span id="typed"></span>
               </h1>
