--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : ホーム</a></li>
-          <li><a href="./works.html" title="">02 : 仕事</a></li>
-          <li><a href="./about.html" title="">03 : この素晴らしい世界に祝福を！</a></li>
+          <li><a href="./works.html" title="">02 : アニメ</a></li>
+          <li><a href="./about.html" title="">03 : 最近始めたこと</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
           <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
