--- a/about.html
+++ b/about.html
@@ -55,14 +55,14 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">01 : 異世界転生のギャグの最高峰！</h1>
+            <h1 class="h2">01 : 最近始めたことは何だい？</h1>
           </div>
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h4>どーゆー話なん？？</h4>
+                  <h3>ＩＴパスポートの勉強</h3>
                   <p>この話は異世界転生系のギャグアニメで，原作は小説17巻で完結しておりアニメは2クール（24話）， 映画があるんだよね。めっちゃ面白いよ。ちなみに自分は全巻持ってますｗ。メンバーの癖が強すぎるのよ！めちゃおもろいよ。</p>
                   <h3>メインキャラクターは？</h3>
                   <h4>カズマ</h4>
