--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>こんにちは！,<br>
+              <h1>どうも！！,<br>
                 <span id="typed-strings">
                   <span>日本に住んでる理系の人です！</span>
                   <span>てきとーに自分語りさせてくださいｗｗ</span>
