--- a/works.html
+++ b/works.html
@@ -76,7 +76,8 @@
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
                         <h3>この素晴らしい世界に祝福を！</h3>
-                        <p>異世界転生系のギャグアニメ最高峰！！見始めたら目不足不可避！！.</p>
+                        <p>異世界転生系のギャグアニメ最高峰！！
+                          見始めたら寝不足不可避！！.</p>
                         <a href="./work.html" title="" class="btn btn-default">見る</a>
                       </div>
                     </div>
