--- a/works.html
+++ b/works.html
@@ -70,7 +70,7 @@
                 <div class="row">
                     <div class="col-sm-4">
 
-                      <a href="./work.html" title="" class="black-image-project-hover">
+                      <a href="./試作品.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/このすば.JPG" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
@@ -78,7 +78,7 @@
                         <h3>この素晴らしい世界に祝福を！</h3>
                         <p>異世界転生系のギャグアニメ最高峰！！
                           見始めたら寝不足不可避！！.</p>
-                        <a href="./work.html" title="" class="btn btn-default">見る</a>
+                        <a href="./試作品.html" title="" class="btn btn-default">見る</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
