--- a/works.html
+++ b/works.html
@@ -82,14 +82,14 @@
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
+                      <a href="./俺ガイル.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/IMG_3509.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
                         <h3>やはり俺の青春ラブコメは間違っている</h3>
                         <p>高校生の青春アニメ！！とにかく考えさせられることが多い！ラストの三期は全話やばい！！</p>
-                        <a href="./work.html" title="" class="btn btn-default">見る</a>
+                        <a href="./俺ガイル.html" title="" class="btn btn-default">見る</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
