--- a/works.html
+++ b/works.html
@@ -111,14 +111,14 @@
             <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
-                    <a href="./work.html" class="black-image-project-hover">
+                    <a href="./よう実.html" class="black-image-project-hover">
                       <img src="./assets/images/IMG_3510.JPG" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
                       <h3>ようこそ実力至上主義の教室へ</h3>
                       <p>頭脳戦と言えばこれ！！とにかくレベルが高すぎて見終わった後は言葉が出ない！</p>
-                      <a href="./work.html" class="btn btn-default">見る</a>
+                      <a href="./よう実.html" class="btn btn-default">見る</a>
                     </div>
                   </div>
                    <div class="col-sm-4">
@@ -134,14 +134,14 @@
                     </div>
                     
                     <div class="col-sm-4">
-                      <a href="./work.html" class="black-image-project-hover">
+                      <a href="./ぐらんぶる.html" class="black-image-project-hover">
                         <img src="./assets/images/IMG_3511.JPG" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
                         <h3>ぐらんぶる</h3>
                         <p>スキューバダイビングサークルのお話！！海がメインと思いきや・・・。</p>
-                        <a href="./work.html" class="btn btn-default">見る</a>
+                        <a href="./ぐらんぶる.html" class="btn btn-default">見る</a>
                       </div>
                     </div>
                     
