--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : ホーム</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : このすば！</a></li>
+          <li><a href="./works.html" title="">02 : アニメ</a></li>
+          <li><a href="./about.html" title="">03 : 最近始めたこと</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
           <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
@@ -71,14 +71,14 @@
                   <h3>ベース</h3>
                   <p>ここにきて楽器ですｗｗ。楽器は中学のアルトリコーダー以来ですよ。それに弦楽器は初挑戦です。なぜこの時期になって始めたのか。そもそも自分はリズムゲームが好きなんすよ。リズムゲームの最高峰って楽器なんですよ（異論は認めます）。
                     　だから楽器やってみたいなぁってｗｗ。ほんとはピアノとかドラムが遠くに最高峰だと思っているのでこの２つのうちのどっちかをやりたかったんだけど高いし置く場所ないから断念したの。とりま指の位置とか覚えて弾けるようになりたいね。</p>
-                  <h3>これ</h3>
-                  <p>これというのはこのネットの記事を作る技術です。ＨＴＭＬっていうんすよ。自分は今Ｃ言語とＰｙｔｈｏｎの２つが使えるくらいなんですけどある日とある横暴な女性から誘われまして夜の２４時くらいからはじめたんすよ。気づいたら朝日を迎えていました。
-                    　自分が使える２つの言語とは全く違うんだけど達成感はこれが一番大きいね。だってサイトよ？世界中の人が見れるの作っちゃうのよ。天才。</p>
+                  <h3>読書</h3>
+                  <p>去年の冬くらいからちゃんと本を読み始めたんですよ。本って言っても漫画とかラノベじゃないぞｗ？自分が読むのは「お金についての本」，「心理学についての本」，「哲学についての本」がメインかな。どれも考えさせられるテーマだから読んでて勉強になるのよ。
+                  少なくとも大学の勉強よりは楽しいねｗ。本はいろいろなことを教えてくれるからみんなにもお勧めしたい。まずは興味のある本からどうですか？</p>
                   <h3>ＦＸ</h3>
                   <p>これはね，とにかく精神が強くなるよ。それにバイトでは味わえないお金のありがたさと貴重さをとても実感できる。ただあまり人には勧めにくい。ちゃんと勉強しないとカモになるだけだからね。自分はしっかり勉強したつもりだけどまだまだ。
                     　カモではないけどね。そんな球に稼げるとは思ってないしこれまらこつこつと頑張りたいね。
                  </p>
-                  <h2>何かを始めるなら今だよ！</h2>
+                  <h2>何かを始めるなら今！</h2>
                   <p>多くの学生が長期休みだと思うし何かに挑戦するなら今しかない！！行動しないと何も始まらないぞ！できるうちにたくさんのことを経験しよ！</p>
                    
                   
