--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
               
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/profil.jpg" class="img-responsive" alt="">
+                  <img src="./assets/images/自分について.JPG" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
