--- a/よう実.html
+++ b/よう実.html
@@ -37,9 +37,9 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
+          <li><a href="./index.html" title="">01 : ホーム</a></li>
+          <li><a href="./works.html" title="">02 : 好きなアニメ</a></li>
+          <li><a href="./about.html" title="">03 : 最近始めたこと</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
           <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
@@ -68,11 +68,16 @@
           <div class="text-center">
             <h1 class="h2">001 : ようこそ実力至上主義の教室へ</h1>
           </div>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
-
+          <h3>あらすじはー？</h3>
+        　<p>主人公の綾小路清隆って人が学校での生活を送る話なんだけど，この高校って少し変わってるんだよね。なんかクラス対抗のチーム戦みたいな感じで争うんだけど，争い方も勉強，スポーツとかいろいろ。下手したら退学もするのよｗ。
+          これを説明するのはむずいｗ！とにかく見て！！まじで学園頭脳戦で一番おもろい。個人的にはアニメより小説派です。</p>
+          <h3>ここが見どころ！</h3>
+          <p>とにかくすごいのが頭脳戦！主人公が最強なのよ。幼い頃にホワイトルームっていう所で教育されて四歳でルベーク積分と速度論マスターよ？頭おかしいのよ。でも目立たないために常に平均点とるっているねｗｗ。なんかあらすじみたいな説明だな。
+          キャラも個性的でとても面白い。てかここまで面白いと文で語ること自体が不可能なのよね。あと名言が多いのよ。一つ気に入っている名言を紹介して終わりにしましょうか。まぁこの名言自体は偉人のものなんですけどねｗ。９話の題名として使われています。</p>
+          
           <blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
+            <p>"人間は自由の刑に処されている。"</p>
+            <small class="pull-right">Sartre, Jean-Paul</small>
           </blockquote>
         </div>
       </div>
@@ -82,18 +87,19 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-02.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/一期.JPG" class="img-responsive" alt="">
+            <p>一年生編の写真です。</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/IMG_3510.JPG" class="img-responsive" alt="">
+            <p>二年生編の写真です。</p>
           </div>
         </div>
       </div>
 
       <div class="col-xs-12">
-        <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/綾小路.JPG" class="img-responsive" alt="">
+        <p>僕がラインのトーク背景にもしている綾小路清隆の写真です。</p>
       </div>
 
     </div>
