--- a/よう実.html
+++ b/よう実.html
@@ -76,7 +76,7 @@
           キャラも個性的でとても面白い。てかここまで面白いと文で語ること自体が不可能なのよね。あと名言が多いのよ。一つ気に入っている名言を紹介して終わりにしましょうか。まぁこの名言自体は偉人のものなんですけどねｗ。９話の題名として使われています。</p>
           
           <blockquote>
-            <p>"人間は自由の刑に処されている。"</p>
+            <p>"人間は自由の刑に処されている" </p>
             <small class="pull-right">Sartre, Jean-Paul</small>
           </blockquote>
         </div>
