--- a/俺ガイル.html
+++ b/俺ガイル.html
@@ -12,7 +12,7 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/アプリアイコン.png">
   <link href="./assets/favicon.ico" rel="icon">
 
   <title>Title page</title>  
@@ -37,16 +37,16 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
+          <li><a href="./index.html" title="">01 : ホーム</a></li>
+          <li><a href="./works.html" title="">02 : 好きなアニメ</a></li>
+          <li><a href="./about.html" title="">03 : 最近始めたこと</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
           <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./index.html" title="" class="active">001</a></li>
+            <li><a href="./index.html" title="" class="active">002</a></li>
             <li><a href="./index.html" title="">002</a></li>
             <li><a href="./index.html" title="">003</a></li>
             <li><a href="./index.html" title="">004</a></li>
@@ -66,13 +66,18 @@
         <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : やはり俺の青春ラブコメは間違っている。</h1>
+            <h1 class="h2">002 : やはり俺の青春ラブコメは間違っている。</h1>
           </div>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+         <h3>どんな話なん？てか題名長くね？</h3>
+          <p>はい。題名は長いです。なのでほとんどの人は「俺ガイル」と略してるんよ。知らなかったん？しっかり勉強しましょう。話を戻してこれは学園アニメね。主人公の比企谷八幡って人は凄い目立たずにクラスの人にも名前を覚えてもらえないくらいなんだけど，
+          そんな人を救おうと先生が奉仕部って部に強制入部させるんよね。そこで活動を通して多くの仲間と出会って・・・って話。まぁ学園アニメなんでもちろん恋愛もあります。てか恋愛の面が凄いのよ。小説家は完結しててアニメも全３クールでラストまでやってる。見るしかない！！</p>
 
+          <h3>少し余談</h3>
+          <p>ちょうど三期の放送期間が高校三年生の時だったのよ。電車の帰りによく見てたんだけど，三期って全部が凄いのよ。だからリアクションとっちゃうのよね。何度視線を向けられたことかｗ。今となっては面白い話です。
+          それと国語力がない僕には理解するのに時間がかかるんですね。毎回見終わった後にネット記事の考察を見て納得していました。それと話は変わってこのアニメ名言が凄い。ラストは名言でしめたいと思います。</p>
           <blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
+            <p>"問題は問題にしなければ問題ではない"</p>
+            <small class="pull-right">比企谷八幡</small>
           </blockquote>
         </div>
       </div>
@@ -82,18 +87,19 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-02.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/IMG_3509.jpg" class="img-responsive" alt="">
+            <p>左から比企谷八幡，由比ヶ浜結衣，雪ノ下雪乃，一色いろは</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/雪ノ下.JPG" class="img-responsive" alt="">
+            <p>僕は雪ノ下推しです。推しと言ってもにわか程度ですがね。</p>
           </div>
         </div>
       </div>
 
       <div class="col-xs-12">
-        <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/戸塚.JPG" class="img-responsive" alt="">
+      <p>奥にいるのは材木座義輝（ざいもくざよしてる）。手前の子は戸塚彩加，男です。女性ではありません。   </p>
       </div>
 
     </div>
