--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/アプリアイコン.jpg">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>試しに作ったサイト</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
