--- a/ぐらんぶる.html
+++ b/ぐらんぶる.html
@@ -68,8 +68,12 @@
           <div class="text-center">
             <h1 class="h2">006 :ぐらんぶる</h1>
           </div>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
-
+          <h3>これなんなんｗ？</h3>
+          <p>ダイビングサークルに入っている北原伊織，今村耕平，古手川千紗をメインとするギャグアニメです。このアニメを一言で表すなら「酒と裸」になる。ダイビングがサブのギャグアニメです。現実世界の
+            ギャグアニメでは一番おもろいんじゃね？そんな気する。原作は漫画でまだ簡潔はしてなくてアニメが１クールある。絶対にハマるからまずは見よう。だって下の写真見て見ろよ。つまらないわけないだろｗｗ。</p>
+          <h3>ここでも余談</h3>
+          <p>いつだっけなー。高1か高2の時にブックオフの立ち読みコーナーでこのマンガ読んでたのよ。面白すぎて一人でげらげら笑ってたもんねｗ。抑えようと努力はしたのよ？でも我慢できなくてねｗ。はたから見たらただの
+          やばいやつになっていました。これ漫画の更新頻度が１年１冊とかでめっちゃ遅いのよ。そもそも買ってないからあれなんだけど，続きが見たいね。定期的にYouTubeでアニメの面白集を見るくらいには好きですｗ。</p>
           <blockquote>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
             <small class="pull-right">Irina Martin</small>
@@ -82,18 +86,19 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-02.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/集合写真.JPG" class="img-responsive" alt="">
+            <p>左から今村耕平，吉原愛菜，古手川千紗，北原伊織</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/古手川.JPG" class="img-responsive" alt="">
+            <p>怒っている顔ですｗ</p>
           </div>
         </div>
       </div>
 
       <div class="col-xs-12">
-        <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/ジャンプ.JPG" class="img-responsive" alt="">
+        <p>どーゆー状況よｗ</p>
       </div>
 
     </div>
