--- a/works.html
+++ b/works.html
@@ -100,7 +100,7 @@
                         <h4>003/006</h4>
                         <h3>シュタインズ・ゲート</h3>
                         <p>タイムリープ系アニメの元祖！！これを見ずにはタイムリープは語れない！！</p>
-                        <a href="./work.html" title="" class="btn btn-default">見る</a>
+                        <a href="./シュタインズゲート.html" title="" class="btn btn-default">見る</a>
                       </div>
                     </div>
                     
