--- a/シュタインズゲート.html
+++ b/シュタインズゲート.html
@@ -37,9 +37,9 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
+          <li><a href="./index.html" title="">01 : ホーム</a></li>
+          <li><a href="./works.html" title="">02 : 好きなアニメ</a></li>
+          <li><a href="./about.html" title="">03 : 最近始めたこと</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
           <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
@@ -66,14 +66,13 @@
         <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Fringilla sit amet</h1>
+            <h1 class="h2">003 : STEINS;GATE</h1>
           </div>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
-
-          <blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
-          </blockquote>
+          <h3>これおもろいの？</h3>
+          <p>結論から言うと良いアニメ。アニメ自体が２０１１年で結構古くてアニメ，映画，ゲーム，漫画があるのよ。ただ最初の６話くらいまでは苦痛かなｗｗ。俺も３回くらい挫折して４回目でやっと最後まで完走したからね。やっぱりタイムリープだからなのかな？話が難しいからなのかわからんけどとにかく
+          最初が飽きちゃうｗ。そこさえ乗り越えれば問題なし。主人公は法王院京馬（岡部倫太郎）って中二病とダル（橋田至）っていう天才ハッカー，椎名まゆりってこの三人かな。未来ガシェット研究所のメンバーなの。何言ってるかわからないよなｗ。実はけっこう物理の勉強になったりする。
+          疲れたから説明はこれでおーわり！！ちなみにヒロイン的存在の牧瀬紅莉栖は結構いいきゃらしとるんよね。</p>
+          
         </div>
       </div>
 
@@ -82,19 +81,9 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-02.jpg" class="img-responsive" alt="">
+            <img src="./assets/images/シュタゲ.JPG" class="img-responsive" alt="">
             <p>Menphis skyline</p>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-12">
-        <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
-      </div>
+          
 
     </div>
   </div>
