--- a/works.html
+++ b/works.html
@@ -127,8 +127,8 @@
                       </a>
                       <div class="card-container">
                         <h4>005/006</h4>
-                        <h3>Angel Beats!</h3>
-                        <p>舞台は死後の世界！？天使との殺し合いが今始まる！！</p>
+                        <h3>青春ブタ野郎はバニーガール先輩の夢を見ない</h3>
+                        <p>思春期症候群という不可思議な体験で人生が大変なことに！？</p>
                         <a href="./work.html" class="btn btn-default">見る</a>
                       </div>
                     </div>
