--- a/works.html
+++ b/works.html
@@ -123,7 +123,7 @@
                   </div>
                    <div class="col-sm-4">
                       <a href="./work.html" class="black-image-project-hover">
-                        <img src="./assets/images/青ブタ.jpg" alt="Image" class="img-responsive">
+                        <img src="./assets/images/IMG_3522.jpg" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
                         <h4>005/006</h4>
@@ -135,7 +135,7 @@
                     
                     <div class="col-sm-4">
                       <a href="./ぐらんぶる.html" class="black-image-project-hover">
-                        <img src="./assets/images/IMG_3511.JPG" alt="Image" class="img-responsive">
+                        <img src="./assets/images/集合写真.JPG" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
