--- a/よう実.html
+++ b/よう実.html
@@ -63,7 +63,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/背景.JPG" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">004 : ようこそ実力至上主義の教室へ</h1>
