--- a/work.html
+++ b/work.html
@@ -63,7 +63,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/ギア.JPG" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">005 : 青春ブタ野郎はバニーガール先輩の夢を見ない</h1>
