--- a/シュタインズゲート.html
+++ b/シュタインズゲート.html
@@ -82,7 +82,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6">
             <img src="./assets/images/シュタゲ.JPG" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <p>赤髪:牧瀬紅莉栖，帽子の子:椎名まゆり，白衣:岡部倫太郎</p>
           
 
     </div>
