--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                   少なくとも大学の勉強よりは楽しいねｗ。本はいろいろなことを教えてくれるからみんなにもお勧めしたい。まずは興味のある本からどうですか？</p>
                   <h3>ＦＸ</h3>
                   <p>これはね，とにかく精神が強くなるよ。それにバイトでは味わえないお金のありがたさと貴重さをとても実感できる。ただあまり人には勧めにくい。ちゃんと勉強しないとカモになるだけだからね。自分はしっかり勉強したつもりだけどまだまだ。
-                    　カモではないけどね。そんな球に稼げるとは思ってないしこれまらこつこつと頑張りたいね。
+                    　しっかりカモの内の一人だと思いますｗ。そんな急に稼げるとは思ってないしこれからこつこつと頑張りたいね。
                  </p>
                   <h2>何かを始めるなら今！</h2>
                   <p>多くの学生が長期休みだと思うし何かに挑戦するなら今しかない！！行動しないと何も始まらないぞ！できるうちにたくさんのことを経験しよ！</p>
