--- a/work.html
+++ b/work.html
@@ -86,7 +86,7 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/集合写真.JPG" class="img-responsive" alt="">
+            <img src="./assets/青ブタ.jpg" class="img-responsive" alt="">
             <p>中央:桜島麻衣，中央左:梓川咲太，その左:古賀朋絵，あとはアニメ見ろ。</p>
           </div>
           <div class="col-xs-12 col-md-6">
