--- a/components.html
+++ b/components.html
@@ -115,7 +115,7 @@
                   </li>
                   <li>
                     <span class="fa-icon">
-                      <p>twitter.com/dolphin_pumpkin/</p><i class="fa fa-twitter"></i>
+                      <i class="fa fa-twitter"></i>
                     </span>
                   </li>
                   <li>
