--- a/components.html
+++ b/components.html
@@ -113,7 +113,7 @@
                       <i class="fa fa-facebook"></i>
                     </span>
                   </li>
-                  <li>
+                  <a href="http://www.twitter.com/dolphin_pumpkin/>
                     <span class="fa-icon">
                       <i class="fa fa-twitter"></i>
                     </span>
