--- a/components.html
+++ b/components.html
@@ -88,7 +88,7 @@
             <div class="col-md-6">
               <h3 class="template-title-example">考え中</h3>
               <ul>
-                <li>Consectetur adipiscing elit</li>
+                <li>なににしようかな</li>
                 <li>Integer molestie lorem at massa</li>
                 <li>Facilisis in pretium nisl aliquet</li>
                 <li>Nulla volutpat aliquam velit</li>
