--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./index.html" title="">01 : ホーム</a></li>
+          <li><a href="./works.html" title="">02 : 好きなアニメ</a></li>
+          <li><a href="./about.html" title="">03 : 最近始めたこと</a></li>
+          <li><a href="./contact.html" title="">04 : 毎日日記について</a></li>
+          <li><a href="./components.html" title="">05 : 編集後記的なやつ</a></li>
         </ul>
 
 
@@ -55,8 +55,9 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : Contact me</h1>
+            <h1 class="h2">03 : 毎日日記について</h1>
           </div>
+            <p>東海オンエア</p>
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
