--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,17 @@
     </div>
   </div>
 
-
+  <h3>Follw me on social networks</h3>
+  <a herf="http://www.facebook.com" title="" class="fa-icon">
+    <i class="fa-facebook"></i>
+  </a>
+  <a herf="http://www.twitter.com/dolphin_pumpkin/" title="" class="fa-icon">
+    <i class="fa-twitter"></i>
+  </a>
+   <a herf="http://www.linkedin.com" title="" class="fa-icon">
+    <i class="fa-linkedin"></i>
+  </a> 
+    
 <footer class="footer-container text-center">
   <div class="container">
     <div class="row">
