--- a/俺ガイル.html
+++ b/俺ガイル.html
@@ -63,7 +63,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/背景.JPG" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">002 : やはり俺の青春ラブコメは間違っている。</h1>
