--- a/シュタインズゲート.html
+++ b/シュタインズゲート.html
@@ -40,8 +40,8 @@
           <li><a href="./index.html" title="">01 : ホーム</a></li>
           <li><a href="./works.html" title="">02 : 好きなアニメ</a></li>
           <li><a href="./about.html" title="">03 : 最近始めたこと</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./contact.html" title="">04 : 毎日日記について</a></li>
+          <li><a href="./components.html" title="">05 : 編集後記的なやつ</a></li>
         </ul>
 
 
@@ -63,7 +63,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/ギア.JPG" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">003 : STEINS;GATE</h1>
