--- a/試作品.html
+++ b/試作品.html
@@ -40,8 +40,8 @@
           <li><a href="./index.html" title="">01 : ホーム</a></li>
           <li><a href="./works.html" title="">02 : アニメ</a></li>
           <li><a href="./about.html" title="">03 : 最近始めたこと</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./contact.html" title="">04 : 毎日日記について</a></li>
+          <li><a href="./components.html" title="">05 : 編集後記的なやつ</a></li>
         </ul>
 
 
