--- a/components.html
+++ b/components.html
@@ -64,7 +64,8 @@
             暇つぶしというかホームページ作成は経験として貴重だと思うから感謝しています。もうこのサイトは更新することがないと思いますｗ。最後に少しだけリストを作って終わりにしたいです。自己紹介っぽくおわらそう。</p>
        
           <blockquote>
-            <p>最低な失敗だった，最高の経験だった</p>
+            <p>最低な失敗だった <br>
+              最高の経験だった</p>
           </blockquote>
           <p>レぺゼンゼン~花鳥風月より歌詞を一部抜粋~</p>
   
