--- a/components.html
+++ b/components.html
@@ -83,8 +83,8 @@
                 <li>妄想感傷代償連盟</li>
                 <li>ダーリンダンス</li>
                 <li>Surges</li>
-                <p>※とても速いぺースでよく聞く曲が変わります。</p>
-                <p>※もちろん他にもたくさんあります。</p>
+                <p>※とても速いぺースでよく聞く曲が変わります。<br>
+                   ※もちろん他にもたくさんあります。</p>
               </ul>
             </div>
             <div class="col-md-6">
