--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
           <li><a href="./index.html" title="">01 : ホーム</a></li>
           <li><a href="./works.html" title="">02 : 好きなアニメ</a></li>
           <li><a href="./about.html" title="">03 : 最近始めたこと</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./contact.html" title="">04 : 毎日日記について</a></li>
+          <li><a href="./components.html" title="">05 : 編集後記的なやつ</a></li>
         </ul>
 
 
@@ -65,7 +65,7 @@
                   <h3>ＩＴパスポートの勉強</h3>
                   <p>オンラインだからってさすがにだらだらしてるのはやばいな～って思ってITパスポートって言う資格の勉強を始めたのよ。教科書のページ数が500ページもあって最近全部読み終えたところなのよｗ。
                     　一通り読み終えたからあとは詰め込むだけ！！ＩＴって言ってるけど内容は会社の経営とか経営においての戦略とかが多くてＩＴはあ１／３くらいしか出題されないんだよねｗｗ。マジで名前詐欺よ。まあ３月中には受かるやろｗｗ。</p>
-                  <h3>簿記３級</h3>
+                  <h3>簿記３級の勉強</h3>
                   <p>なぜこいつは理系なのに簿記なのか。そう思う人が大半だろう。理由はありません，僕もなぜ受けたいのか分かりませんがお金は大好きだし楽しそうだからですｗ。僕の周りで簿記の勉強してる人が多くて鼓舞された感じかな。
                     　まぁ３級なら受かるだろって気持ちですが実際のところ知識ゼロなので何とも言えないですｗ。まぁこれも３～４月には受かるやろｗ。大体で生きています。</p>
                   <h3>ベース</h3>
