--- a/components.html
+++ b/components.html
@@ -65,7 +65,8 @@
        
           <blockquote>
             <p>最低な失敗だった <br>
-              最高の経験だった</p>
+               最高の経験だった
+            </p>
           </blockquote>
           <p>レぺゼンゼン~花鳥風月より歌詞を一部抜粋~</p>
   
@@ -84,7 +85,8 @@
                 <li>ダーリンダンス</li>
                 <li>Surges</li>
                 <p>※とても速いぺースでよく聞く曲が変わります。<br>
-                   ※もちろん他にもたくさんあります。</p>
+                   ※もちろん他にもたくさんあります。
+                </p>
               </ul>
             </div>
             <div class="col-md-6">
