--- a/components.html
+++ b/components.html
@@ -117,7 +117,7 @@
                       <i class="fa fa-facebook"></i>
                     </span>
                   </li>
-                  <a href="http://www.twitter.com/dolphin_pumpkin/>
+                  <a href="http://www.twitter.com/dolphin_pumpkin/" tiltle"="" class="fa-icon">
                     <span class="fa-icon">
                       <i class="fa fa-twitter"></i>
                     </span>
