--- a/contact.html
+++ b/contact.html
@@ -66,15 +66,9 @@
       
 
   <h3>Follw me on social networks</h3>
-  <a herf="http://www.facebook.com" title="" class="fa-icon">
-    <i class="fa-facebook"></i>
-  </a>
-  <a herf="http://www.twitter.com/dolphin_pumpkin/" title="" class="fa-icon">
-    <i class="fa-twitter"></i>
-  </a>
-   <a herf="http://www.linkedin.com" title="" class="fa-icon">
-    <i class="fa-linkedin"></i>
-  </a> 
+ <a href="http://www.twitter.com/dolphin_pumpkin/" tiltle"="" class="fa-icon">
+                    <span class="fa-icon">
+                      <i class="fa fa-twitter"></i>
     
        </div>
       </div>
