--- a/work.html
+++ b/work.html
@@ -66,7 +66,9 @@
         <img src="./assets/images/ギア.JPG" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">005 : 青春ブタ野郎はバニーガール先輩の夢を見ない</h1>
+            <h1 class="h2">005 :<br> 
+                           青春ブタ野郎はバニーガール先輩の<br>
+                           夢を見ない</h1>
           </div>
           <h3>あらすじはー？</h3>
           <p>このアニメは知ってる人も多いと思います。高校一年生の時の生物のK先生がこのアニメについて授業中に言及していましたからね。で，内容は主人公である梓川咲太とヒロインの桜島麻衣の物語。思春期症候群て病気？謎の現象が麻依に降り注いだんよ。
