--- a/よう実.html
+++ b/よう実.html
@@ -66,7 +66,10 @@
         <img src="./assets/images/背景.JPG" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">004 : ようこそ実力至上主義の教室へ</h1>
+            <h1 class="h2">004 :<br>
+                           ようこそ<br>
+                           実力至上主義の<br>
+                           教室へ</h1>
           </div>
           <h3>あらすじはー？</h3>
         　<p>主人公の綾小路清隆って人が学校での生活を送る話なんだけど，この高校って少し変わってるんだよね。なんかクラス対抗のチーム戦みたいな感じで争うんだけど，争い方も勉強，スポーツとかいろいろ。下手したら退学もするのよｗ。
