--- a/俺ガイル.html
+++ b/俺ガイル.html
@@ -66,7 +66,10 @@
         <img src="./assets/images/背景.JPG" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">002 : やはり俺の青春ラブコメは間違っている。</h1>
+            <h1 class="h2">002 :<br> 
+                           やはり俺の<br>
+                           青春ラブコメは<br>
+                           間違っている。</h1>
           </div>
          <h3>どんな話なん？てか題名長くね？</h3>
           <p>はい。題名は長いです。なのでほとんどの人は「俺ガイル」と略してるんよ。知らなかったん？しっかり勉強しましょう。話を戻してこれは学園アニメね。主人公の比企谷八幡って人は凄い目立たずにクラスの人にも名前を覚えてもらえないくらいなんだけど，
