--- a/試作品.html
+++ b/試作品.html
@@ -66,7 +66,9 @@
         <img src="./assets/images/背景.JPG" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 :この素晴らしい世界に祝福を！</h1>
+            <h1 class="h2">001 :<br>
+                           この素晴らしい<br>
+                           世界に祝福を！</h1>
           </div>
           <h3>そもそもどんな話なん？</h3>
           <p>この話は異世界転生系のギャグアニメで，原作は小説17巻で完結しておりアニメは2クール（24話）， 映画があるんだよね。めっちゃ面白いよ。ちなみに自分は全巻持ってますｗ。メンバーの癖が強すぎるのよ！めちゃおもろいよ。</p>
