--- a/works.html
+++ b/works.html
@@ -75,9 +75,10 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>この素晴らしい世界に祝福を！</h3>
-                        <p>異世界転生系のギャグアニメ最高峰！！
-                          見始めたら寝不足不可避！！.</p>
+                        <h3>この素晴らしい世界に<br>
+                            祝福を！</h3>
+                        <p>異世界転生系のギャグアニメ最高峰！！<br>
+                           見始めたら寝不足不可避！！.</p>
                         <a href="./試作品.html" title="" class="btn btn-default">見る</a>
                       </div>
                     </div>
@@ -87,7 +88,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>やはり俺の青春ラブコメは間違っている</h3>
+                        <h3>やはり俺の青春ラブコメは<br>
+                            間違っている</h3>
                         <p>高校生の青春アニメ！！とにかく考えさせられることが多い！ラストの三期は全話やばい！！</p>
                         <a href="./俺ガイル.html" title="" class="btn btn-default">見る</a>
                       </div>
@@ -99,7 +101,8 @@
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
                         <h3>シュタインズ・ゲート</h3>
-                        <p>タイムリープ系アニメの元祖！！これを見ずにはタイムリープは語れない！！</p>
+                        <p>タイムリープ系アニメの元祖！！これを見ずには<br>
+                           タイムリープは語れない！！</p>
                         <a href="./シュタインズゲート.html" title="" class="btn btn-default">見る</a>
                       </div>
                     </div>
@@ -116,8 +119,10 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>ようこそ実力至上主義の教室へ</h3>
-                      <p>頭脳戦と言えばこれ！！とにかくレベルが高すぎて見終わった後は言葉が出ない！</p>
+                      <h3>ようこそ実力至上主義の<br>
+                          教室へ</h3>
+                      <p>頭脳戦と言えばこれ！！とにかくレベルが<br>
+                         高すぎて見終わった後は言葉が出ない！</p>
                       <a href="./よう実.html" class="btn btn-default">見る</a>
                     </div>
                   </div>
@@ -128,7 +133,8 @@
                       <div class="card-container">
                         <h4>005/006</h4>
                         <h3>青春ブタ野郎はバニーガール先輩の夢を見ない</h3>
-                        <p>思春期症候群という不可思議な体験で人生が大変なことに！？</p>
+                        <p>思春期症候群という不可思議な体験で<br>
+                           人生が大変なことに！？</p>
                         <a href="./work.html" class="btn btn-default">見る</a>
                       </div>
                     </div>
@@ -140,7 +146,8 @@
                       <div class="card-container">
                         <h4>006/006</h4>
                         <h3>ぐらんぶる</h3>
-                        <p>スキューバダイビングサークルのお話！！海がメインと思いきや・・・。</p>
+                        <p>スキューバダイビングサークルのお話！！<br>
+                           海がメインと思いきや・・・。</p>
                         <a href="./ぐらんぶる.html" class="btn btn-default">見る</a>
                       </div>
                     </div>
