--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : 毎日日記について</h1>
+            <h1 class="h2">04 : 毎日日記について</h1>
           </div>
             <h3>毎日日記ってなんなん？</h3>
           <p>毎日日記は僕が高校一年生かな？の時に一年間だけＬＩＮＥの一言コメントを使って毎日日記を記してたんですよ。知る人ぞ知るってやつですね。メモアプリに内容は全部残ってるから大学一年の冬休みに少し振り返ってたら凄い面白かったんよ。
@@ -65,7 +65,7 @@
           
       
 
-  <h3>Follw me on social networks</h3>
+  <h3>Follw me on social media</h3>
  <a href="http://www.twitter.com/dolphin_pumpkin/" tiltle"="" class="fa-icon">
                     <span class="fa-icon">
                       <i class="fa fa-twitter"></i>
