--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div class="text-content">
               <h1>どうも！！,<br>
                 <span id="typed-strings">
-                  <span>日本に住んでる理系の人です！</span>
-                  <span>てきとーに自分語りさせてくださいｗｗ</span>
+                  <span>日本に住んでる理系の人です。</span>
+                  <span>良かったら見て行ってください。</span>
                 </span>
                 <span id="typed"></span>
               </h1>
