--- a/components.html
+++ b/components.html
@@ -59,7 +59,7 @@
 
         <div class="template-example">
           <h2 class="template-title-example">編集後記的なやつ</h2>
-          <p>てかまずは何でこんなん作ったかだよな。とある日の２３時過ぎかな？とある人から連絡がきたんよ。一緒にホームページ作ろうと。断ろうと思ったけど<b>自称金髪ヤクザ</b>だったので黙って従って作ったってわけよ。
+          <p>てかまずは何でこんなん作ったかだよな。とある日の２３時過ぎかな？とある人から連絡がきたんよ。一緒にホームページ作ろうと。断ろうと思ったけど<b>自称金髪ヤクザ（現在はパープルヤクザ）</b>だったので黙って従って作ったってわけよ。
             まぁ楽しいから結果としては良かったけどね。好きなアニメの欄とか選ぶのも説明も大変で疲れた。最近始めたことも文字を打つのが大変。てか他にもっということあるだろって感じよｗｗ。
             暇つぶしというかホームページ作成は経験として貴重だと思うから感謝しています。もうこのサイトは更新することがないと思いますｗ。<b>また，このサイトの感想を何らかの形で僕に教えてくれると嬉しいです。</b>最後に少しだけリストを作って終わりにしたいです。自己紹介っぽくおわらそう。</p>
        
