--- a/components.html
+++ b/components.html
@@ -79,7 +79,7 @@
               <h3 class="template-title-example">最近聞く曲</h3>
               <ul>
                 <li>p.h.</li>
-                <li>きらり</li>
+                <li>狂言（Adoのアルバム）</li>
                 <li>残響散歌</li>
                 <li>妄想感傷代償連盟</li>
                 <li>ダーリンダンス</li>
